kubernetes/apps/gdd-service/stash/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stash
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media Management"
    gethomepage.dev/name: Stash
    gethomepage.dev/icon: stash.png
    gethomepage.dev/description: "Tailscale only | Media organizer"
    gethomepage.dev/widget.type: stash
    gethomepage.dev/widget.url: "http://stash.gdd-service.svc:9999"
spec:
  ingressClassName: tailscale
  rules:
    - host: stash.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stash
                port:
                  number: 9999
  tls:
    - hosts:
        - stash.barn-walleye.ts.net
